# skoltech-map

android-measurements/: settings.gradle.kts
android-measurements/app/: build.gradle.kts
android-measurements/app/src/androidTest/java/com/example/skoltechmapmeasurements/: ExampleInstrumentedTest.kt
android-measurements/app/src/main/: AndroidManifest.xml
android-measurements/app/src/main/java/com/example/skoltechmapmeasurements/: MainActivity.kt
android-measurements/app/src/main/java/com/example/skoltechmapmeasurements/bluetooth/: BluetoothScanner.kt
android-measurements/app/src/main/java/com/example/skoltechmapmeasurements/device/: DeviceInfoManager.kt
android-measurements/app/src/main/java/com/example/skoltechmapmeasurements/event/: EventBus.kt
android-measurements/app/src/main/java/com/example/skoltechmapmeasurements/location/: LocationManager.kt
android-measurements/app/src/main/java/com/example/skoltechmapmeasurements/model/: Measurement.kt
android-measurements/app/src/main/java/com/example/skoltechmapmeasurements/network/: MeasurementApiService.kt
android-measurements/app/src/main/res/values/: strings.xml  themes.xml
android-measurements/app/src/test/java/com/example/skoltechmapmeasurements/: ExampleUnitTest.kt
android-measurements/gradle/: libs.versions.toml
android-measurements/gradle/wrapper/: gradle-wrapper.properties
backend/: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yaml  pyproject.toml  settings.example.yaml  settings.schema.yaml
backend/src/: __main__.py  app.py  config_schema.py  prepare.py
(+7 files in other folders)
