[project]
name = "skoltech-map-backend"
version = "0.1.0"
description = ""
authors = ["one-zero-eight <https://t.me/one_zero_eight>"]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiosqlite>=0.21.0",
    "colorlog>=6.9.0",
    "fastapi-derive-responses>=0.1.3",
    "fastapi-swagger>=0.2.6",
    "fastapi[standard]>=0.115.8",
    "gunicorn>=23.0.0",
    "itsdangerous>=2.2.0",
    "pandas>=2.2.3",
    "python-multipart>=0.0.20",
    "sqlalchemy>=2.0.38",
]

[tool.uv]
package = false

[tool.ruff]
line-length = 120
lint.ignore = ["PLR"]
lint.extend-select = ["I", "UP", "PL"]
target-version = "py312"
